mount source code only in development

--- a/backend/docker-compose.override.yml
+++ b/backend/docker-compose.override.yml
@@ -13,6 +13,10 @@ version: "3.6"
 services:
   web:
     ports:
+      # We only bind ports directly in development:
       - "8000:8000"
       # shell_plus --notebook
       - "8888:8888"
+    volumes:
+      # We only mount source code in development:
+      - .:/code
