add sentry for production

--- a/backend/config/.env.template
+++ b/backend/config/.env.template
@@ -34,3 +34,9 @@ POSTGRES_PASSWORD=
 # Used only by django:
 DJANGO_DATABASE_HOST=localhost
 DJANGO_DATABASE_PORT=5432
+
+
+# === Sentry ===
+# Used only in the production environment.
+
+DSN=link_to_sentry_dsn
