Exposed port, added volumes, dockerignore

--- a/web-app/Dockerfile
+++ b/web-app/Dockerfile
@@ -1,17 +1,12 @@
 FROM node:carbon as builder
 
-WORKDIR /web-app
+WORKDIR /
 
 COPY yarn.lock yarn.lock
 COPY package.json package.json
 
 RUN yarn
 
-COPY . .
+COPY . /
 
 RUN yarn build
-
-FROM nginx
-
-COPY ./nginx.conf /etc/nginx/conf.d/nginx.conf
-COPY --from=builder /web-app/public /web-app/public
