Added workdir, fixed context, added empty line

--- a/web-app/Dockerfile
+++ b/web-app/Dockerfile
@@ -1,12 +1,12 @@
 FROM node:carbon as builder
 
-WORKDIR /
+WORKDIR /web-app
 
 COPY yarn.lock yarn.lock
 COPY package.json package.json
 
 RUN yarn
 
-COPY . /
+COPY . .
 
 RUN yarn build
