--- a/web-app/docker-compose.yml
+++ b/web-app/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3.7"
 
 services:
   web-app:
-    container_name: web-app-skyexpo
+    container_name: skyexpo-webapp
     build:
-      context: ./
+      context: .
     image: skyexpo_web-app
     ports:
       - 3000:3000
