--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,15 +4,14 @@
 #
 # Instead, it should be a part of your deploy strategy.
 
-version: "3.6"
+version: "3.7"
 services:
   traefik:
     image: traefik:2.1
     restart: unless-stopped
-    env_file: ./config/.env
     volumes:
-      - ./docker/traefik/traefik.yml:/etc/traefik/traefik.yml:ro
-      - ./docker/traefik/dynamic_conf.yml:/etc/traefik/dynamic_conf.yml:ro
+      - ./backend/docker/traefik/traefik.yml:/etc/traefik/traefik.yml:ro
+      - ./backend/docker/traefik/dynamic_conf.yml:/etc/traefik/dynamic_conf.yml:ro
     ports:
       - 80:80
       - 443:443
@@ -26,7 +25,7 @@ services:
     image: nginx:1.17
     restart: unless-stopped
     volumes:
-      - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./backend/docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - django-static:/var/www/django/static:ro  # serving django's statics
       - django-media:/var/www/django/media:ro  # serving django's media
     depends_on:
@@ -38,7 +37,7 @@ services:
     <<: &web
       build:
         target: production_build
-        context: .
+        context: ./backend
         dockerfile: ./docker/django/Dockerfile
         args:
           DJANGO_ENV: production
