--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,6 +8,7 @@ version: "3.7"
 services:
   traefik:
     image: traefik:2.1
+    container_name: skyexpo-traefik
     restart: unless-stopped
     volumes:
       - ./backend/docker/traefik/traefik.yml:/etc/traefik/traefik.yml:ro
@@ -23,7 +24,10 @@ services:
       - proxynet
 
   nginx:
-    image: nginx:1.17
+    build:
+      context: ./backend
+      dockerfile: ./docker/nginx
+    container_name: skyexpo-nginx
     restart: unless-stopped
     volumes:
       - ./backend/docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
