--- a/.drone.yml
+++ b/.drone.yml
@@ -1,32 +1,82 @@
-pipeline:
-  ping:
-    image: tmaier/docker-compose:latest
-    environment:
-      DOCKER_HOST: unix:///drone/docker.sock
-      SECRET_DJANGO_SECRET_KEY:
-        from_secret: SECRET_DJANGO_SECRET_KEY
-    volumes:
-      - /etc/hosts:/etc/hosts
-    secrets:
-      - source: SSH_PRIVATE_KEY
-        target: SSH_PRIVATE_KEY
-    commands:
-      - while (! docker info &>/dev/null); do sleep 1; done
-      - python -m pip install --upgrade pip
-      - pip install dump-env
-      - dump-env -t ./backend/config/.env.template -p "SECRET_" > ./backend/config/.env
-      - cat ./backend/config/.env
-      - docker-compose -f docker-compose.yml -f docker-compose.prod.yml config
-      - docker-compose run --rm web sh ./docker/ci.sh
-      - "which ssh-agent || ( apk add --no-cache openssh-client )"
-      - eval $(ssh-agent -s)
-      - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-      - mkdir -p ~/.ssh
-      - chmod 700 ~/.ssh
-      - ssh -o StrictHostKeyChecking=no ubuntu@app-skyexpo 'pwd'
+---
+
+globalvariables:
+  image: &docker-compose-image tmaier/docker-compose:latest
+  volumes: &docker-compose-volumes
+    - name: hosts
+      path: /etc/hosts
+    - name: dockersock
+      path: /var/run
+
+
+kind: pipeline
+type: docker
+name: default
+
+clone:
+  depth: 1
+
+steps:
+- name: Create .env configuration file
+  image: python:3.7.5-alpine3.10
+  commands:
+    - python -m pip install --upgrade pip
+    - pip install dump-env
+    - dump-env -t ./backend/config/.env.template -p 'SECRET_'
+      --strict=SECRET_DJANGO_SECRET_KEY > ./backend/config/.env
+  environment:
+    SECRET_DJANGO_SECRET_KEY:
+      from_secret: SECRET_DJANGO_SECRET_KEY
+
+
+- name: Prepare docker-compose
+  image: *docker-compose-image
+  volumes:
+    *docker-compose-volumes
+  commands:
+    - while (! docker info &>/dev/null); do sleep 1; done
+    - docker version
+    - docker info
+    - uname -a
+
+- name: Run backend CI
+  image: *docker-compose-image
+  volumes:
+    *docker-compose-volumes
+  pull: if-not-exists
+  commands:
+    - docker-compose -f docker-compose.yml -f docker-compose.prod.yml config --quiet
+    - docker-compose run --rm web sh ./docker/ci.sh
+
+- name: Deploy to staging
+  image: *docker-compose-image
+  volumes:
+    *docker-compose-volumes
+  pull: if-not-exists
+  commands:
+    - "which ssh-agent || ( apk add --no-cache openssh-client )"
+    - eval $(ssh-agent -s)
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+    - ssh -o StrictHostKeyChecking=no ubuntu@app-skyexpo 'pwd'
+  when:
+    branch:
+      - develop
 
 services:
-  docker:
+  - name: docker
     image: docker:dind
     privileged: true
-    command: ["-H", "unix:///drone/docker.sock"]
+    environment:
+      DOCKER_TLS_CERTDIR: ""
+    volumes:
+      - name: dockersock
+        path: /var/run
+
+volumes:
+  - name: dockersock
+    temp: {}
+  - name: hosts
+    host:
+      path: /etc/hosts
