--- a/backend/config/.env.template
+++ b/backend/config/.env.template
@@ -17,7 +17,8 @@ TLS_EMAIL=webmaster@myapp.com
 # Generate yours with:
 # python3 -c 'import secrets; print(secrets.token_hex(50))'
 
-DJANGO_SECRET_KEY=__CHANGEME__
+# Please change DJANGO_SECRET_KEY in production
+DJANGO_SECRET_KEY=pL]VK1l[?YJiiEd4;~=4q22<*&w)}=S>P|Ugyb|0ED28rw)HQ>
 
 
 # === Database ===
