--- a/.drone.yml
+++ b/.drone.yml
@@ -65,6 +65,9 @@ steps:
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
     - ssh -o StrictHostKeyChecking=no ubuntu@app-skyexpo 'pwd'
+    - rsync -rlptgDvz --exclude=node_modules --exclude=__pycache__ --exclude=/reports . ubuntu@app-skyexpo:/home/ubuntu/skyexpo
+    - ssh -o StrictHostKeyChecking=no ubuntu@app-skyexpo uptime
+    - ssh -A ubuntu@app-skyexpo 'cd /home/ubuntu/skyexpo; docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --build'
   when:
     branch:
       - develop
