--- a/.drone.yml
+++ b/.drone.yml
@@ -58,6 +58,9 @@ steps:
   volumes:
     *docker-compose-volumes
   pull: if-not-exists
+  environment:
+    SSH_PRIVATE_KEY:
+      from_secret: SSH_PRIVATE_KEY
   commands:
     - "which ssh-agent || ( apk add --no-cache openssh-client )"
     - eval $(ssh-agent -s)
