install rsync on drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -63,6 +63,7 @@ steps:
       from_secret: SSH_PRIVATE_KEY
   commands:
     - "which ssh-agent || ( apk add --no-cache openssh-client )"
+    - "which rsync || ( apk add --no-cache rsync )"
     - eval $(ssh-agent -s)
     - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
     - mkdir -p ~/.ssh
