--- a/backend/docker/nginx/nginx.conf
+++ b/backend/docker/nginx/nginx.conf
@@ -1,3 +1,11 @@
+upstream backend {
+    server skyexpo-web:8000;
+}
+
+upstream frontend {
+    server skyexpo-webapp:3000;
+}
+
 server {
     client_max_body_size 10m;
     listen 80;
@@ -7,12 +15,31 @@ server {
     proxy_set_header X-Nginx-Proxy true;
     port_in_redirect off;
 
-    location /static {
+    location /api/static {
       alias /var/www/django/static;
     }
 
     location /media {
       autoindex on;
       alias /var/www/django/media;
+    }
+
+    location /api {
+        proxy_pass http://backend/api;
+        proxy_redirect off;
+    }
+
+    location /admin {
+        proxy_pass http://backend/admin;
+        proxy_redirect off;
+    }
+
+    location / {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_pass http://frontend;
     }
 }
