--- a/backend/docker/nginx/Dockerfile
+++ b/backend/docker/nginx/Dockerfile
@@ -1,6 +1,8 @@
 FROM nginx:1.17
 
-COPY ./docker/nginx/nginx.conf /etc/nginx/conf.d/default.conf
+RUN rm /etc/nginx/conf.d/*
+
+COPY ./docker/nginx/nginx.conf /etc/nginx/conf.d/nging.conf
 
 RUN ln -sf /dev/stdout /var/log/nginx/access.log \
     && ln -sf /dev/stderr /var/log/nginx/error.lo
