--- a/backend/docker/traefik/traefik.yml
+++ b/backend/docker/traefik/traefik.yml
@@ -17,10 +17,10 @@ providers:
   file:
     filename: "/etc/traefik/dynamic_conf.yml"
 
-certificatesResolvers:
-  letsencrypt:
-    acme:
-      email: "marcin.josinski@skygate.io"
-      storage: "acme.json"
-      httpChallenge:
-        entryPoint: "web"
+#certificatesResolvers:
+#  letsencrypt:
+#    acme:
+#      email: "marcin.josinski@skygate.io"
+#      storage: "acme.json"
+#      httpChallenge:
+#        entryPoint: "web"
