--- a/.drone.yml
+++ b/.drone.yml
@@ -27,11 +27,8 @@ steps:
   environment:
     SECRET_DJANGO_SECRET_KEY:
       from_secret: SECRET_DJANGO_SECRET_KEY
-  when:
-    branch:
-      - fix-drone-ci-rsync
-    event: {exclude: [pull_request]}
-
+    SECRET_SENTRY_DSN:
+      from_secret: SECRET_SENTRY_DSN
 
 - name: prepare docker-compose
   image: *docker-compose-image
@@ -49,9 +46,8 @@ steps:
     *docker-compose-volumes
   pull: if-not-exists
   commands:
-    - cp ./backend/config/.env.template ./backend/config/.env
     - docker-compose -f docker-compose.yml -f docker-compose.prod.yml config --quiet
-#    - docker-compose run --rm web sh ./docker/ci.sh
+    - docker-compose run --rm web sh ./docker/ci.sh
 
 - name: deploy to staging
   image: *docker-compose-image
@@ -73,7 +69,7 @@ steps:
     - ssh -A ubuntu@app-skyexpo 'cd /home/ubuntu/skyexpo; docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d'
   when:
     branch:
-      - fix-drone-ci-rsync
+      - develop
     event: {exclude: [pull_request]}
 
 services:
