fix drone ci rsync (#11)
* fix drone ci rsync

* replace traefik with nginx

* refactor drone yml

--- a/.drone.yml
+++ b/.drone.yml
@@ -27,11 +27,8 @@ steps:
   environment:
     SECRET_DJANGO_SECRET_KEY:
       from_secret: SECRET_DJANGO_SECRET_KEY
-  when:
-    branch:
-      - develop
-    event: {exclude: [pull_request]}
-
+    SECRET_SENTRY_DSN:
+      from_secret: SECRET_SENTRY_DSN
 
 - name: prepare docker-compose
   image: *docker-compose-image
@@ -49,7 +46,6 @@ steps:
     *docker-compose-volumes
   pull: if-not-exists
   commands:
-    - cp ./backend/config/.env.template ./backend/config/.env
     - docker-compose -f docker-compose.yml -f docker-compose.prod.yml config --quiet
     - docker-compose run --rm web sh ./docker/ci.sh
 
@@ -68,9 +64,9 @@ steps:
     - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
-    - rsync -rlptgDvz --exclude=node_modules --exclude=__pycache__ --exclude=/htmlcov . ubuntu@app-skyexpo:~/skyexpo
-    - ssh -o StrictHostKeyChecking=no ubuntu@app-skyexpo uptime
-    - ssh -A ubuntu@app-skyexpo 'cd /home/ubuntu/skyexpo; docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --build'
+    - "rsync -e 'ssh -o StrictHostKeyChecking=no' -rlptgDvz --exclude=node_modules --exclude=__pycache__ --exclude=/htmlcov . ubuntu@app-skyexpo:/home/ubuntu/skyexpo"
+    - ssh -A ubuntu@app-skyexpo 'cd /home/ubuntu/skyexpo; docker-compose -f docker-compose.yml -f docker-compose.prod.yml build'
+    - ssh -A ubuntu@app-skyexpo 'cd /home/ubuntu/skyexpo; docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d'
   when:
     branch:
       - develop
