add django-countries, pillow, django-phonenumber packages

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,10 @@ django-csp = "^3.5"
 django-health-check = "^3.11"
 django-http-referrer-policy = "^1.0"
 django-feature-policy = "^3.1"
+django-countries = "^5.5"
+django-phonenumber-field = "^3.0"
+phonenumbers = "^8.10"
+Pillow = "^6.2"
 psycopg2 = "^2.8"
 gunicorn = "^20.0"
 python-decouple = "^3.3"
