add endpoint for validating first step

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -20,6 +20,8 @@ services:
     volumes:
       # We only mount source code in development:
       - ./backend:/code
+    stdin_open: true
+    tty: true
 
   web-app:
     build:
