--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -41,7 +41,7 @@ pyrsistent = "0.14.2"
 # TODO: drf-yasg should be in dev-dependecies but views currently need decorator from this package
 # Try to resolve it somehow so we can move drf-yasg into dev-dependencies.
 drf-yasg = "^1.17"
-
+typing-extensions = "^3.7"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "^2.1"
