--- a/web-app/package.json
+++ b/web-app/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "antd": "^3.25.2",
     "formik": "^2.0.4",
-    "lodash": "^4.17.15",
+    "ramda": "^0.26.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
