--- a/web-app/package.json
+++ b/web-app/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
     "antd": "^3.25.2",
     "formik": "^2.0.4",
     "ramda": "^0.26.1",
