add founder_email to company model

--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -92,7 +92,7 @@ python_version = 3.7
 
 allow_redefinition = False
 check_untyped_defs = True
-disallow_untyped_decorators = True
+disallow_untyped_decorators = False
 # It's commented for now because: https://github.com/typeddjango/django-stubs/issues/142
 # disallow_any_explicit = True
 disallow_any_generics = True
