--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,6 +30,7 @@ django-feature-policy = "^3.1"
 django-countries = "^5.5"
 django-phonenumber-field = "^3.0"
 phonenumbers = "^8.11"
+glom = "^19.10"
 Pillow = "^6.2"
 psycopg2 = "^2.8"
 gunicorn = "^20.0"
