--- a/web-app/package.json
+++ b/web-app/package.json
@@ -7,9 +7,11 @@
     "@emotion/styled": "^10.0.23",
     "antd": "^3.25.2",
     "formik": "^2.0.4",
+    "history": "^4.10.1",
     "ramda": "^0.26.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "yup": "^0.27.0"
   },
