--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,7 @@ django-http-referrer-policy = "^1.0"
 django-feature-policy = "^3.1"
 django-countries = "^5.5"
 django-phonenumber-field = "^3.0"
+django-cors-headers = "^3.2"
 phonenumbers = "^8.11"
 glom = "^19.10"
 Pillow = "^6.2"
