--- a/web-app/package.json
+++ b/web-app/package.json
@@ -17,6 +17,7 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-observable": "^1.2.0",
+    "rxjs": "^6.5.3",
     "yup": "^0.27.0"
   },
   "scripts": {
