--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,11 @@ services:
         target: development_build
         context: ./backend
         dockerfile: ./docker/django/Dockerfile
+        cache_from: 
+          - registry.hal.skygate.io/skyexpo-web
         args:
           DJANGO_ENV: development
+      image: registry.hal.skygate.io/skyexpo-web
       container_name: skyexpo-web
       volumes:
         - django-static:/var/www/django/static
