--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -51,7 +51,7 @@ DJANGO_SETTINGS_MODULE = server.settings
 # Timeout for tests, so they can not take longer
 # than this amout of seconds.
 # You should adjust this value to be as low as possible:
-timeout = 5
+timeout = 10
 
 # Directories that are not visited by pytest collector:
 norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__
@@ -115,6 +115,6 @@ plugins =
 [mypy.plugins.django-stubs]
 django_settings_module = server.settings
 
-[mypy-server.*.migrations.*]
+[mypy-server.apps.*.migrations.*]
 # Django migrations should not produce any errors:
 ignore_errors = True
