--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -7,6 +7,7 @@ branch = True
 omit =
   server/*/migrations/*.py
   server/settings/components/ddt.py
+  server/utils/exception_handler.py
 
 
 [flake8]
