--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -6,8 +6,6 @@
 branch = True
 omit =
   server/*/migrations/*.py
-  server/settings/components/ddt.py
-  server/utils/exception_handler.py
 
 
 [flake8]
@@ -31,7 +29,7 @@ exclude = .git,__pycache__,.venv,.eggs,*.egg
 # Disable some pydocstyle checks:
 ignore = D100, D102, D104, D105, D106, D401, E121, X100, W504, WPS110, WPS115, WPS121,
          WPS305, WPS432, WPS306, RST303, RST304, NIP103, S105, S106, DAR103, DAR203,
-         D400, D205, WPS442, WPS202, WPS226, DJ08
+         D400, D205, WPS442, WPS202, WPS226
 
 # Docs: https://github.com/snoack/flake8-per-file-ignores
 # You can completely or partially disable our custom checks,
