add celery flower

--- a/backend/config/.env.template
+++ b/backend/config/.env.template
@@ -41,3 +41,10 @@ DJANGO_DATABASE_PORT=5432
 # Used only in the production environment.
 
 DSN=link_to_sentry_dsn
+
+
+# === RabbitMQ ===
+RABBITMQ_USERNAME=skyexpo
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_PASSWORD=123qweasd
