--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -40,6 +40,8 @@ dump-env = "^1.1"
 bcrypt = "^3.1"
 sentry-sdk = "^0.14"
 pyrsistent = "0.14.2"
+celery = "^4.4"
+flower = "^0.9"
 # TODO: drf-yasg should be in dev-dependecies but views currently need decorator from this package
 # Try to resolve it somehow so we can move drf-yasg into dev-dependencies.
 drf-yasg = "^1.17"
