--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -35,3 +35,23 @@ services:
   db:
     ports:
       - 5432:5432
+
+  celery-worker:
+    volumes:
+      # We only mount source code in development:
+      - ./backend:/code
+    stdin_open: true
+    tty: true
+
+  celery-flower:
+    volumes:
+      # We only mount source code in development:
+      - ./backend:/code
+    stdin_open: true
+    tty: true
+
+  rabbitmq:
+    ports:
+      - 5672:5672
+      - 5462:5462
+      - 15672:15672
