--- a/backend/config/.env.template
+++ b/backend/config/.env.template
@@ -48,3 +48,8 @@ RABBITMQ_USERNAME=skyexpo
 RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
 RABBITMQ_PASSWORD=123qweasd
+
+
+# === Email ===
+EMAIL_HOST=mailhog
+EMAIL_PORT=1025
