--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -50,6 +50,12 @@ services:
     stdin_open: true
     tty: true
 
+  mailhog:
+    image: "mailhog/mailhog"
+    ports:
+      - 1025:1025
+      - 8025:8025
+
   rabbitmq:
     ports:
       - 5672:5672
