replace rabbitmq with celery and change path to tasks.py

--- a/backend/config/.env.template
+++ b/backend/config/.env.template
@@ -43,11 +43,10 @@ DJANGO_DATABASE_PORT=5432
 DSN=link_to_sentry_dsn
 
 
-# === RabbitMQ ===
-RABBITMQ_USERNAME=skyexpo
-RABBITMQ_HOST=rabbitmq
-RABBITMQ_PORT=5672
-RABBITMQ_PASSWORD=123qweasd
+# === Redis ===
+REDIS_HOSTNAME=skyexpo-redis
+REDIS_PORT=6379
+REDIS_PASSWORD=123qweasd
 
 
 # === Email ===
