--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -56,8 +56,6 @@ services:
       - 1025:1025
       - 8025:8025
 
-  rabbitmq:
+  redis:
     ports:
-      - 5672:5672
-      - 5462:5462
-      - 15672:15672
+      - 6379:6379
