--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   redux: ^4.0.0
   flutter_redux: ^0.6.0
   redux_epics: ^0.13.0
+  reselect: ^0.4.0
   http: ^0.12.0+4
   cupertino_icons: ^0.1.2
 
