--- a/backend/docker/django/Dockerfile
+++ b/backend/docker/django/Dockerfile
@@ -1,7 +1,7 @@
 # This Dockerfile uses multi-stage build to customize DEV and PROD images:
 # https://docs.docker.com/develop/develop-images/multistage-build/
 
-FROM python:3.7.4-alpine3.9 as development_build
+FROM python:3.7.6-slim-buster as development_build
 
 ARG DJANGO_ENV
 
@@ -16,68 +16,63 @@ ENV DJANGO_ENV=${DJANGO_ENV} \
   PIP_DEFAULT_TIMEOUT=100 \
   # dockerize:
   DOCKERIZE_VERSION=v0.6.1 \
+  # tini:
+  TINI_VERSION=v0.18.0 \
   # poetry:
-  POETRY_VERSION=0.12.17
+  POETRY_VERSION=1.0.3 \
+  POETRY_VIRTUALENVS_CREATE=false
 
 
 # System deps:
-RUN apk --no-cache add \
+RUN apt-get update \
+  && apt-get install --no-install-recommends -y \
     bash \
-    build-base \
+    build-essential \
     curl \
+    freetds-dev \
+    unixodbc-dev \
     gcc \
     gettext \
     git \
     libffi-dev \
-    linux-headers \
-    openssl \
-    musl-dev \
-    postgresql-dev \
-    tini \
-    # Pillow dependencies
-    jpeg-dev \
-    zlib-dev \
-    freetype-dev \
-    lcms2-dev \
-    openjpeg-dev \
-    tiff-dev \
-    tk-dev \
-    tcl-dev \
-    harfbuzz-dev \
-    fribidi-dev \
-  # Installing `poetry` package manager:
-  # https://github.com/sdispater/poetry
-  && pip install -U "pip<19.0" \
-  && pip install "poetry==$POETRY_VERSION" \
+    libxml2-dev \
+    libxslt-dev \
+    libpq-dev \
+    wget \
+  # Cleaning cache:
+  && apt-get clean && rm -rf /var/lib/apt/lists/* \
   # Installing `dockerize` utility:
   # https://github.com/jwilder/dockerize
-  && wget "https://github.com/jwilder/dockerize/releases/download/${DOCKERIZE_VERSION}/dockerize-alpine-linux-amd64-${DOCKERIZE_VERSION}.tar.gz" \
-  && tar -C /usr/local/bin -xzvf "dockerize-alpine-linux-amd64-${DOCKERIZE_VERSION}.tar.gz" \
-  && rm "dockerize-alpine-linux-amd64-${DOCKERIZE_VERSION}.tar.gz"
+  && wget "https://github.com/jwilder/dockerize/releases/download/${DOCKERIZE_VERSION}/dockerize-linux-amd64-${DOCKERIZE_VERSION}.tar.gz" \
+  && tar -C /usr/local/bin -xzvf "dockerize-linux-amd64-${DOCKERIZE_VERSION}.tar.gz" \
+  && rm "dockerize-linux-amd64-${DOCKERIZE_VERSION}.tar.gz" && dockerize --version \
+  # Installing `tini` utility:
+  # https://github.com/krallin/tini
+  && wget -O /usr/local/bin/tini "https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini" \
+  && chmod +x /usr/local/bin/tini && tini --version \
+  # Installing `poetry` package manager:
+  # https://github.com/python-poetry/poetry
+  && pip install "poetry==$POETRY_VERSION" && poetry --version
 
-# Copy only requirements, to cache them in docker layer:
+# Copy only requirements, to cache them in docker layer
 WORKDIR /pysetup
 COPY ./poetry.lock ./pyproject.toml /pysetup/
+
+# Project initialization:
+RUN echo "$DJANGO_ENV" && poetry install $(if [ "$DJANGO_ENV" = 'production' ]; then echo '--no-dev'; fi) --no-interaction --no-ansi
 
 # This is a special case. We need to run this script as an entry point:
 COPY ./docker/django/entrypoint.sh /docker-entrypoint.sh
 
-# Project initialization:
-RUN chmod +x "/docker-entrypoint.sh" \
-  && poetry config settings.virtualenvs.create false \
-  && poetry install $(test "$DJANGO_ENV" == production && echo "--no-dev") --no-interaction --no-ansi
+# Setting proper permissions:
+RUN chmod +x '/docker-entrypoint.sh'
 
 # This dir will become the mountpoint of development code:
 WORKDIR /code
-
-ENTRYPOINT ["/sbin/tini", "--", "/docker-entrypoint.sh"]
-
+ENTRYPOINT ["tini", "--", "/docker-entrypoint.sh"]
 
 # The following stage is only for Prod:
-# https://wemake-django-template.readthedocs.io/en/latest/pages/template/production.html
 
 FROM development_build as production_build
 
 COPY . /code
-
-RUN python /code/manage.py compilemessages
